# SimpleHttpServer

./: .gitignore  CMakeLists.txt  README.md  build.sh
Q&A/: syscall.md  项目问答.md
example/: Makefile  README.md  build.sh  main.cpp  test.cpp
mymuduo/http/: CMakeLists.txt  HttpContext.cpp  HttpContext.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  README.md
mymuduo/net/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  DefaultPoller.cpp  EPollPoller.cpp  EPollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  Poller.cpp  Poller.h  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  TimerId.h  TimerQueue.cpp  TimerQueue.h
mymuduo/sql/: CMakeLists.txt  SqlConnectionPool.cpp  SqlConnectionPool.h  SqlOperation.cpp  SqlOperation.h
mymuduo/utils/: Atomic.h  CMakeLists.txt  CurrentThread.cpp  Logger.cpp  Logger.h  Timestamp.cpp  Timestamp.h  Type.h  copyable.h  noncopyable.h
root/: image.html  index.html  login.html  loginfail.html  pdf.html  picture.html  register.html  registerfail.html  registersucceed.html  video.html  video1080.html  video4320.html  video480.html
